add_library(index_loader mem_io.cpp)
target_compile_options(index_loader PUBLIC "-O2" "-g")
target_link_libraries(index_loader PUBLIC spdlog)

if (GUSTANN_USE_SPDK)
  message("include SPDK Backend")
  add_subdirectory(spdk/)
  target_link_libraries(index_loader PUBLIC spdk_io)
  target_compile_definitions(index_loader PUBLIC "USE_SPDK")
endif()

if (GUSTANN_USE_URING)
  message("include io_uring Backend")
  target_sources(index_loader PRIVATE io_uring.cpp)
  target_include_directories(index_loader PUBLIC ${CMAKE_SOURCE_DIR}/deps/liburing/src/include)
  target_link_libraries(index_loader PUBLIC ${CMAKE_SOURCE_DIR}/deps/liburing/src/liburing.a)
  target_compile_definitions(index_loader PUBLIC "USE_URING")
endif()

if (GUSTANN_USE_AIO)
  message("include AIO Backend")
  target_sources(index_loader PRIVATE aio.cpp)
  target_link_libraries(index_loader PUBLIC aio)
  target_compile_definitions(index_loader PUBLIC "USE_AIO")
endif()
